// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 hRupY"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lksfSS"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 cSYMfL"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 iHqYbC"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 jgjaTp"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 kMLYPQ"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lksfSS"
        disabled=""
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 liVEyY"
        disabled=""
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 bTyxJm"
          disabled=""
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 iZVAWZ"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 dRDYtv"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lksfSS"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 cSYMfL"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 iHqYbC"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 hPQGCm"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lksfSS"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
